--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
   },
   "type": "module",
   "dependencies": {
+    "bits-ui": "^0.21.13",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwind-variants": "^0.2.1",
     "typescript-svelte-plugin": "^0.3.40"
   }
 }
