--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "bits-ui": "^0.21.13",
     "clsx": "^2.1.1",
     "lucide-svelte": "^0.435.0",
+    "mode-watcher": "^0.4.1",
+    "svelte-sonner": "^0.3.27",
     "tailwind-merge": "^2.5.2",
     "tailwind-variants": "^0.2.1",
     "typescript-svelte-plugin": "^0.3.40"
